kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server

    spec:
      containers:
        - name: server
          image: naveens01/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "500m"
