kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: client.web.app 
      http:
        paths:
          - backend:
                service:
                  name: client-service
            pathType: prefix
